--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-hot-toast": "^2.5.2",
     "shadcn": "^2.5.0",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "vis-network": "^9.1.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
